feat: Add unit tests for AI strategies and Evolver, and configure TypeScript for the project.

--- a/caravan-react/tsconfig.json
+++ b/caravan-react/tsconfig.json
@@ -23,6 +23,9 @@
     "include": [
         "src"
     ],
+    "exclude": [
+        "src/simulation/evolution/RunEvolution.ts"
+    ],
     "references": [
         {
             "path": "./tsconfig.node.json"
