--- a/caravan-react/package.json
+++ b/caravan-react/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest run",
+    "evolve": "tsx src/simulation/evolution/RunEvolution.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -30,6 +31,7 @@
     "jsdom": "^28.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^4.0.18"
