--- a/caravan-react/tsconfig.json
+++ b/caravan-react/tsconfig.json
@@ -24,7 +24,8 @@
         "src"
     ],
     "exclude": [
-        "src/simulation/evolution/RunEvolution.ts"
+        "src/simulation/evolution/RunEvolution.ts",
+        "src/tests"
     ],
     "references": [
         {
