--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ yarn-error.log*
 # Project specific
 caravan-react/node_modules/
 caravan-react/dist/
-caravan-react/evolution_logs_13.txt
-caravan-react/evolution_logs_batch13.txt
+caravan-react/evolution_logs_*.txt
+caravan-react/config_results_*.json
+Bugs.txt
